@@ -6,9 +6,11 @@ import io.vertx.core.http.HttpMethod;
 import io.vertx.junit5.VertxTestContext;
 import io.vertx.kafka.client.common.TopicPartition;
 import io.vertx.kafka.client.consumer.KafkaConsumer;
+import io.vertx.kafka.client.consumer.KafkaConsumerRecord;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.bf2.admin.kafka.admin.model.Types;
 import org.bf2.admin.kafka.systemtest.bases.OauthTestBase;
+import org.bf2.admin.kafka.systemtest.deployment.DeploymentManager.UserType;
 import org.bf2.admin.kafka.systemtest.enums.ReturnCodes;
 import org.bf2.admin.kafka.systemtest.json.OffsetModel;
 import org.bf2.admin.kafka.systemtest.json.PartitionsModel;
@@ -23,6 +25,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -38,10 +41,10 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         String groupID = UUID.randomUUID().toString();
         kafkaClient.createTopics(Collections.singletonList(topic));
         CountDownLatch cd = new CountDownLatch(1);
-        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10).onComplete(x -> cd.countDown()).onFailure(y -> testContext.failNow("Could not receive messages"));
 
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 10, token);
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 10, token);
         assertThat(cd.await(2, TimeUnit.MINUTES)).isTrue();
         consumer.close();
         List<PartitionsModel> partList = Collections.singletonList(new PartitionsModel(topic.name(), new ArrayList<>()));
@@ -50,7 +53,7 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         CountDownLatch cd2 = new CountDownLatch(1);
         createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/consumer-groups/" + groupID + "/reset-offset")
                 .compose(req -> req.putHeader("content-type", "application/json")
-                        .putHeader("Authorization", "Bearer " + token.getAccessToken())
+                        .putHeader("Authorization", "Bearer " + token)
                         .send(MODEL_DESERIALIZER.serializeBody(model)).onSuccess(response -> {
                             if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
                                 testContext.failNow("Status code " + response.statusCode() + " is not correct");
@@ -58,15 +61,16 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
                             assertStrictTransportSecurityEnabled(response, testContext);
                         }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
                 .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    Types.TopicPartitionResetResult result = MODEL_DESERIALIZER.getResetResult(buffer);
-                    assertThat(result.getOffset()).isEqualTo(0);
-                    assertThat(result.getTopic()).isEqualTo(topic.name());
+                    List<Types.TopicPartitionResetResult> results = MODEL_DESERIALIZER.getResetResult(buffer);
+                    assertThat(results).hasSize(1);
+                    Types.TopicPartitionResetResult expected = new Types.TopicPartitionResetResult(topic.name(), 0, 0L);
+                    assertThat(results).contains(expected);
                     cd2.countDown();
                 })));
 
         assertThat(cd2.await(1, TimeUnit.MINUTES)).isTrue();
 
-        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         consumer2.subscribe(topic.name());
         consumer2.poll(Duration.ofSeconds(20), result -> testContext.verify(() -> {
             assertThat(result.succeeded()).isTrue();
@@ -82,18 +86,18 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         String groupID = UUID.randomUUID().toString();
         kafkaClient.createTopics(Collections.singletonList(topic));
         CountDownLatch cd = new CountDownLatch(1);
-        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10).onComplete(x -> cd.countDown()).onFailure(y -> testContext.failNow("Could not receive messages"));
 
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 10, token);
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 10, token);
         assertThat(cd.await(2, TimeUnit.MINUTES)).isTrue();
         consumer.close();
         List<PartitionsModel> partList = Collections.singletonList(new PartitionsModel(topic.name(), new ArrayList<>()));
         OffsetModel model = new OffsetModel("relative", "latest", partList);
-        changeTokenToUnauthorized(vertx, testContext);
+        this.token = deployments.getAccessTokenNow(vertx, UserType.OTHER);
         createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/consumer-groups/" + groupID + "/reset-offset")
                 .compose(req -> req.putHeader("content-type", "application/json")
-                        .putHeader("Authorization", "Bearer " + token.getAccessToken())
+                        .putHeader("Authorization", "Bearer " + token)
                         .send(MODEL_DESERIALIZER.serializeBody(model)).onSuccess(response -> testContext.verify(() -> {
                             assertThat(response.statusCode()).isEqualTo(ReturnCodes.FAILED_REQUEST.code);
                             assertStrictTransportSecurityEnabled(response, testContext);
@@ -109,10 +113,10 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         String groupID = UUID.randomUUID().toString();
         kafkaClient.createTopics(Collections.singletonList(topic));
         CountDownLatch cd = new CountDownLatch(1);
-        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10).onComplete(x -> cd.countDown()).onFailure(y -> testContext.failNow("Could not receive messages"));
 
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 10, token);
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 10, token);
         assertThat(cd.await(2, TimeUnit.MINUTES)).isTrue();
         consumer.close();
         List<PartitionsModel> partList = Collections.singletonList(new PartitionsModel(topic.name(), new ArrayList<>()));
@@ -121,7 +125,7 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         CountDownLatch cd2 = new CountDownLatch(1);
         createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/consumer-groups/" + groupID + "/reset-offset")
                 .compose(req -> req.putHeader("content-type", "application/json")
-                        .putHeader("Authorization", "Bearer " + token.getAccessToken())
+                        .putHeader("Authorization", "Bearer " + token)
                         .send(MODEL_DESERIALIZER.serializeBody(model)).onSuccess(response -> {
                             if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
                                 testContext.failNow("Status code " + response.statusCode() + " is not correct");
@@ -129,16 +133,16 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
                             assertStrictTransportSecurityEnabled(response, testContext);
                         }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
                 .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    Types.TopicPartitionResetResult result = MODEL_DESERIALIZER.getResetResult(buffer);
-                    assertThat(result).isNotEqualTo(null);
-                    assertThat(result.getOffset()).isEqualTo(10);
-                    assertThat(result.getTopic()).isEqualTo(topic.name());
+                    List<Types.TopicPartitionResetResult> results = MODEL_DESERIALIZER.getResetResult(buffer);
+                    assertThat(results).hasSize(1);
+                    Types.TopicPartitionResetResult expected = new Types.TopicPartitionResetResult(topic.name(), 0, 10L);
+                    assertThat(results).contains(expected);
                     cd2.countDown();
                 })));
         assertThat(cd2.await(1, TimeUnit.MINUTES)).isTrue();
 
 
-        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         consumer2.subscribe(topic.name());
         consumer2.poll(Duration.ofSeconds(20), result -> testContext.verify(() -> {
             assertThat(result.succeeded()).isTrue();
@@ -154,10 +158,10 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         String groupID = UUID.randomUUID().toString();
         kafkaClient.createTopics(Collections.singletonList(topic));
         CountDownLatch cd = new CountDownLatch(1);
-        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10).onComplete(x -> cd.countDown()).onFailure(y -> testContext.failNow("Could not receive messages"));
 
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 10, token);
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 10, token);
         assertThat(cd.await(2, TimeUnit.MINUTES)).isTrue();
         consumer.close();
         List<PartitionsModel> partList = Collections.singletonList(new PartitionsModel(topic.name(), new ArrayList<>()));
@@ -166,7 +170,7 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         CountDownLatch cd2 = new CountDownLatch(1);
         createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/consumer-groups/" + groupID + "/reset-offset")
                 .compose(req -> req.putHeader("content-type", "application/json")
-                        .putHeader("Authorization", "Bearer " + token.getAccessToken())
+                        .putHeader("Authorization", "Bearer " + token)
                         .send(MODEL_DESERIALIZER.serializeBody(model)).onSuccess(response -> {
                             if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
                                 testContext.failNow("Status code " + response.statusCode() + " is not correct");
@@ -174,16 +178,16 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
                             assertStrictTransportSecurityEnabled(response, testContext);
                         }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
                 .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    Types.TopicPartitionResetResult result = MODEL_DESERIALIZER.getResetResult(buffer);
-                    assertThat(result).isNotEqualTo(null);
-                    assertThat(result.getOffset()).isEqualTo(5);
-                    assertThat(result.getTopic()).isEqualTo(topic.name());
+                    List<Types.TopicPartitionResetResult> results = MODEL_DESERIALIZER.getResetResult(buffer);
+                    assertThat(results).hasSize(1);
+                    Types.TopicPartitionResetResult expected = new Types.TopicPartitionResetResult(topic.name(), 0, 5L);
+                    assertThat(results).contains(expected);
                     cd2.countDown();
                 })));
         assertThat(cd2.await(1, TimeUnit.MINUTES)).isTrue();
 
 
-        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         consumer2.subscribe(topic.name());
         consumer2.poll(Duration.ofSeconds(20), result -> testContext.verify(() -> {
             assertThat(result.succeeded()).isTrue();
@@ -199,17 +203,16 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         String groupID = UUID.randomUUID().toString();
         kafkaClient.createTopics(Collections.singletonList(topic));
         CountDownLatch cd = new CountDownLatch(1);
-        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
 
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 5, token, "A");
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 5, token, "A");
         // Sleep between sections
-        Thread.sleep(10_000);
+        Thread.sleep(2_000);
 
         DateTimeFormatter sdfDate = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss'" + ZonedDateTime.now().getZone().getId() + "'");
         String timestamp = sdfDate.format(LocalDateTime.now());
 
-        Thread.sleep(10_000);
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 5, token, "B");
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 5, token, "B");
 
         AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10).onComplete(x -> cd.countDown()).onFailure(y -> testContext.failNow("Could not receive messages"));
         assertThat(cd.await(2, TimeUnit.MINUTES)).isTrue();
@@ -221,7 +224,7 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         CountDownLatch cd2 = new CountDownLatch(1);
         createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/consumer-groups/" + groupID + "/reset-offset")
                 .compose(req -> req.putHeader("content-type", "application/json")
-                        .putHeader("Authorization", "Bearer " + token.getAccessToken())
+                        .putHeader("Authorization", "Bearer " + token)
                         .send(MODEL_DESERIALIZER.serializeBody(model)).onSuccess(response -> {
                             if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
                                 testContext.failNow("Status code " + response.statusCode() + " is not correct");
@@ -230,16 +233,19 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
                         }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
                 .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
                     assertThat(testContext.failed()).isFalse();
-                    Types.TopicPartitionResetResult result = MODEL_DESERIALIZER.getResetResult(buffer);
-                    assertThat(result).isNotEqualTo(null);
-                    assertThat(result.getOffset()).isEqualTo(5);
-                    assertThat(result.getTopic()).isEqualTo(topic.name());
+                    List<Types.TopicPartitionResetResult> results = MODEL_DESERIALIZER.getResetResult(buffer);
+                    assertThat(results).isNotEmpty();
+                    Types.TopicPartitionResetResult expected = new Types.TopicPartitionResetResult(topic.name(), 0, 5L);
+                    if (!results.contains(expected)) {
+                        System.out.println("missing! " + timestamp);
+                    }
+                    assertThat(results).contains(expected);
                     cd2.countDown();
                 })));
         assertThat(cd2.await(1, TimeUnit.MINUTES)).isTrue();
 
 
-        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         consumer2.subscribe(topic.name());
         consumer2.poll(Duration.ofSeconds(20), result -> testContext.verify(() -> {
             assertThat(result.succeeded()).isTrue();
@@ -258,21 +264,30 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
         String groupID = UUID.randomUUID().toString();
         kafkaClient.createTopics(Collections.singletonList(topic));
         CountDownLatch cd = new CountDownLatch(1);
-        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
 
-        AsyncMessaging.produceMessages(vertx, "localhost:9092", topic.name(), 10, token, "Y");
+        AsyncMessaging.produceMessages(vertx, externalBootstrap, topic.name(), 10, token);
 
-        AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10).onComplete(x -> cd.countDown()).onFailure(y -> testContext.failNow("Could not receive messages"));
+        List<KafkaConsumerRecord<String, String>> part0Records = new ArrayList<>();
+
+        AsyncMessaging.consumeMessages(vertx, consumer, topic.name(), 10)
+            .map(records -> {
+                records.stream().filter(r -> r.partition() == 0).forEach(part0Records::add);
+                return null;
+            })
+            .onComplete(x -> cd.countDown())
+            .onFailure(y -> testContext.failNow("Could not receive messages"));
+
         assertThat(cd.await(2, TimeUnit.MINUTES)).isTrue();
         consumer.close();
 
-        List<PartitionsModel> partList = Collections.singletonList(new PartitionsModel(topic.name(), Collections.singletonList(0)));
+        List<PartitionsModel> partList = Collections.singletonList(new PartitionsModel(topic.name(), List.of(0, 1, 2)));
 
-        OffsetModel model = new OffsetModel("absolute", "5", partList);
+        OffsetModel model = new OffsetModel("absolute", "0", partList);
         CountDownLatch cd2 = new CountDownLatch(1);
         createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/consumer-groups/" + groupID + "/reset-offset")
                 .compose(req -> req.putHeader("content-type", "application/json")
-                        .putHeader("Authorization", "Bearer " + token.getAccessToken())
+                        .putHeader("Authorization", "Bearer " + token)
                         .send(MODEL_DESERIALIZER.serializeBody(model)).onSuccess(response -> {
                             if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
                                 testContext.failNow("Status code " + response.statusCode() + " is not correct");
@@ -281,23 +296,24 @@ public class PartitionsOffsetOauthIT extends OauthTestBase {
                         }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
                 .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
                     assertThat(testContext.failed()).isFalse();
-                    Types.TopicPartitionResetResult result = MODEL_DESERIALIZER.getResetResult(buffer);
-                    assertThat(result).isNotEqualTo(null);
-                    assertThat(result.getOffset()).isEqualTo(5);
-                    assertThat(result.getTopic()).isEqualTo(topic.name());
+                    List<Types.TopicPartitionResetResult> results = MODEL_DESERIALIZER.getResetResult(buffer);
+                    assertThat(results).hasSize(3);
+                    assertThat(results).contains(new Types.TopicPartitionResetResult(topic.name(), 0, 0L));
+                    assertThat(results).contains(new Types.TopicPartitionResetResult(topic.name(), 1, 0L));
+                    assertThat(results).contains(new Types.TopicPartitionResetResult(topic.name(), 2, 0L));
                     cd2.countDown();
                 })));
         assertThat(cd2.await(1, TimeUnit.MINUTES)).isTrue();
 
-        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth("localhost:9092", groupID, token));
+        KafkaConsumer<String, String> consumer2 = KafkaConsumer.create(vertx, ClientsConfig.getConsumerConfigOauth(externalBootstrap, groupID, token));
         TopicPartition partition = new TopicPartition(topic.name(), 0);
         consumer2.assign(partition);
         CountDownLatch cd3 = new CountDownLatch(1);
         consumer2.poll(Duration.ofSeconds(20), result -> testContext.verify(() -> {
             assertThat(result.succeeded()).isTrue();
-            assertThat(result.result().size()).isEqualTo(5);
+            assertThat(result.result().size()).isEqualTo(part0Records.size());
             result.result().records().records(topic.name()).forEach(record -> {
-                assertThat(record.partition()).isEqualTo(0);
+                assertThat(part0Records.stream().anyMatch(c -> Objects.equals(c.value(), record.value())));
             });
             cd3.countDown();
         }));
